subiendo el ejercicio de js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#orador">Conviértete en orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="#tickets">Comprar tickets</a>
+            <a class="nav-link text-success" href="./tickets.html">Comprar tickets</a>
           </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
           del evento, a otros estudiantes Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
         </p>
         <button type="button" class="btn btn-outline-light" id="comprar">Quiero ser orador</button>
-        <button type="button" class="btn btn-success" id="comprar">Comprar tickets</button>
+        <a href="./tickets.html" type="button" class="btn btn-success" id="comprar">Comprar tickets</a>
       </div>
     </div>
     <div id="titulo">
